# Leistungsbot

./: .Bot.py.swp  .gitignore  .pre-commit-config.yaml  Bot.py  BotConfig.example  BotConfig.yml  BotHelper.py  BotScheduler.py  Dockerfile  LICENSE.md  POLL_LOGS.txt  README.md  api.php  app.json  config_default.yaml  docker-compose.yml  get-pip.py  google_place.py  heroku_config.py  install.sh  joined_groups.txt  leistungsdb.py  pyproject.toml  recentpoll.txt  requirements.txt
.github/: labeler.yml
.github/workflows/: docker-image.yml  main.yml  pre-commit.yml  pytest.yml
example_db/: aria_log.00000001  aria_log_control  docker-compose.yml  ib_buffer_pool  leistung_db.sql  leistungstag.sql  location_rating.sql  locations.sql  members.sql  participants.sql
example_db/leistungs_db/: leistungstag.frm  leistungstag.ibd  location_rating.frm  location_rating.ibd  locations.frm  locations.ibd  members.frm  members.ibd  participants.frm  participants.ibd
example_db/mysql/: column_stats.MYI  column_stats.frm  columns_priv.MYI  columns_priv.frm  db.MYD  db.MYI  db.frm  event.MYI  event.frm  func.MYI  func.frm  general_log.frm  gtid_slave_pos.frm  help_category.MYI  help_category.frm  help_keyword.MYI  help_keyword.frm  help_relation.MYI  help_relation.frm  help_topic.MYI  help_topic.frm  host.MYI  host.frm  index_stats.MYI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  (+35 more)
leistungsbot/: Bot.py  BotHelper.py  BotScheduler.py  __main__.py  google_place.py  leistungs_config.py  leistungs_db.py  leistungsdb.py
tests/: __init__.py  google_place_test.py
